Project

General

Profile

Actions

Bug #19363

closed

return two responses when user do GetAcl on bucket

Added by Chang Liu about 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
kraken
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

➜ build git:(wip-fix-seg-fault) ✗ s3cmd info s3://liuchang/

s3://liuchang/ (bucket):
   Location:  us-east-1
   Payer:     BucketOwner
   Expiration Rule: none
ERROR: Error parsing xml: not well-formed (invalid token): line 1, column 101
ERROR: <LifecycleConfiguration xmlns="http://s3.amazonaws.com/doc/2006-03-01/"></LifecycleConfiguration>HTTP/1.1 200 OK
x-amz-request-id: tx000000000000000000026-0058d38277-103e-default
Content-Type: application/xml
Content-Length: 937
Date: Thu, 23 Mar 2017 08:08:23 GMT

<?xml version="1.0" encoding="UTF-8"?><AccessControlPolicy xmlns="http://s3.amazonaws.com/doc/2006-03-01/"><Owner><ID>56789abcdef0123456789abcdef0123456789abcdef0123456789abcdef01234</ID><DisplayName>john.doe</DisplayName></Owner><AccessControlList><Grant><Grantee xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:type="Group"><URI>http://acs.amazonaws.com/groups/global/AllUsers</URI></Grantee><Permission>READ</Permission></Grant><Grant><Grantee xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:type="CanonicalUser"><ID>56789abcdef0123456789abcdef0123456789abcdef0123456789abcdef01234</ID><DisplayName>john.doe</DisplayName></Grantee><Permission>FULL_CONTROL</Permission></Grant><Grant><Grantee xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:type="CanonicalUser"><ID>test</ID><DisplayName>Tester-Subuser</DisplayName></Grantee><Permission>READ</Permission></Grant></AccessControlList></AccessControlPolicy>


Actions #1

Updated by Chang Liu about 7 years ago

MORE LOG
-------------------------

DEBUG: CreateRequest: resource[uri]=/?acl
DEBUG: Using signature v4
DEBUG: get_hostname(liuchang): localhost:8000
DEBUG: canonical_headers = host:localhost:8000
x-amz-content-sha256:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
x-amz-date:20170323T082519Z

DEBUG: Canonical Request:
GET
/liuchang/
acl=
host:localhost:8000
x-amz-content-sha256:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
x-amz-date:20170323T082519Z

host;x-amz-content-sha256;x-amz-date
e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
----------------------
DEBUG: signature-v4 headers: {'x-amz-content-sha256': 'e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855', 'Authorization': 'AWS4-HMAC-SHA256 Credential=NOPQRSTUVWXYZABCDEFG/20170323/US/s3/aws4_request,SignedHeaders=host;x-amz-content-sha256;x-amz-date,Signature=3f5745a715f283ce5cfaddc204f4bf9c542f3e70017089f90d7d000f4aee0fab', 'x-amz-date': '20170323T082519Z'}
DEBUG: Processing request, please wait...
DEBUG: get_hostname(liuchang): localhost:8000
DEBUG: ConnMan.get(): re-using connection: http://localhost:8000#3
DEBUG: format_uri(): /liuchang/?acl
DEBUG: Sending request method_string='GET', uri='/liuchang/?acl', headers={'x-amz-content-sha256': 'e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855', 'Authorization': 'AWS4-HMAC-SHA256 Credential=NOPQRSTUVWXYZABCDEFG/20170323/US/s3/aws4_request,SignedHeaders=host;x-amz-content-sha256;x-amz-date,Signature=3f5745a715f283ce5cfaddc204f4bf9c542f3e70017089f90d7d000f4aee0fab', 'x-amz-date': '20170323T082519Z'}, body=(0 bytes)
DEBUG: Response: {'status': 200, 'headers': {}, 'reason': '', 'data': '<LifecycleConfiguration xmlns="http://s3.amazonaws.com/doc/2006-03-01/&quot;&gt;&lt;/LifecycleConfiguration&gt;HTTP/1.1 200 OK\r\nx-amz-request-id: tx000000000000000000008-0058d3866f-5e31-default\r\nContent-Type: application/xml\r\nContent-Length: 937\r\nDate: Thu, 23 Mar 2017 08:25:19 GMT\r\n\r\n<AccessControlPolicy xmlns="http://s3.amazonaws.com/doc/2006-03-01/&quot;&gt;&lt;Owner&gt;&lt;ID&gt;56789abcdef0123456789abcdef0123456789abcdef0123456789abcdef01234&lt;/ID&gt;&lt;DisplayName&gt;john.doe&lt;/DisplayName&gt;&lt;/Owner&gt;&lt;AccessControlList&gt;&lt;Grant&gt;&lt;Grantee xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance&quot; xsi:type="Group"><URI>http://acs.amazonaws.com/groups/global/AllUsers&lt;/URI&gt;&lt;/Grantee&gt;&lt;Permission&gt;READ&lt;/Permission&gt;&lt;/Grant&gt;&lt;Grant&gt;&lt;Grantee xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance&quot; xsi:type="CanonicalUser"><ID>56789abcdef0123456789abcdef0123456789abcdef0123456789abcdef01234</ID><DisplayName>john.doe</DisplayName></Grantee><Permission>FULL_CONTROL</Permission></Grant><Grant><Grantee xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance&quot; xsi:type="CanonicalUser"><ID>test</ID><DisplayName>Tester-Subuser</DisplayName></Grantee><Permission>READ</Permission></Grant></AccessControlList></AccessControlPolicy>'}
DEBUG: ConnMan.put(): connection put back to pool (http://localhost:8000#4)
ERROR: Error parsing xml: not well-formed (invalid token): line 1, column 101
ERROR: <LifecycleConfiguration xmlns="http://s3.amazonaws.com/doc/2006-03-01/&quot;&gt;&lt;/LifecycleConfiguration&gt;HTTP/1.1 200 OK
x-amz-request-id: tx000000000000000000008-0058d3866f-5e31-default
Content-Type: application/xml
Content-Length: 937
Date: Thu, 23 Mar 2017 08:25:19 GMT

<AccessControlPolicy xmlns="http://s3.amazonaws.com/doc/2006-03-01/&quot;&gt;&lt;Owner&gt;&lt;ID&gt;56789abcdef0123456789abcdef0123456789abcdef0123456789abcdef01234&lt;/ID&gt;&lt;DisplayName&gt;john.doe&lt;/DisplayName&gt;&lt;/Owner&gt;&lt;AccessControlList&gt;&lt;Grant&gt;&lt;Grantee xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance&quot; xsi:type="Group"><URI>http://acs.amazonaws.com/groups/global/AllUsers&lt;/URI&gt;&lt;/Grantee&gt;&lt;Permission&gt;READ&lt;/Permission&gt;&lt;/Grant&gt;&lt;Grant&gt;&lt;Grantee xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance&quot; xsi:type="CanonicalUser"><ID>56789abcdef0123456789abcdef0123456789abcdef0123456789abcdef01234</ID><DisplayName>john.doe</DisplayName></Grantee><Permission>FULL_CONTROL</Permission></Grant><Grant><Grantee xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance&quot; xsi:type="CanonicalUser"><ID>test</ID><DisplayName>Tester-Subuser</DisplayName></Grantee><Permission>READ</Permission></Grant></AccessControlList></AccessControlPolicy>

Actions #2

Updated by Nathan Cutler about 7 years ago

  • Project changed from Ceph to rgw
  • Category deleted (22)
Actions #3

Updated by Chang Liu about 7 years ago

curl -v 'http://localhost:8000/liuchang/?lifecycle'
  • Trying 127.0.0.1...
  • Connected to localhost (127.0.0.1) port 8000 (#0)

GET /liuchang/?lifecycle HTTP/1.1
Host: localhost:8000
User-Agent: curl/7.47.0
Accept: */*

< HTTP/1.1 404 Not Found
< Content-Length: 236
< x-amz-request-id: tx000000000000000000009-0058d3cc18-1e4cb-default
< Accept-Ranges: bytes
< Content-Type: application/xml
< Date: Thu, 23 Mar 2017 13:22:32 GMT
<
  • Excess found in a non pipelined read: excess = 97, size = 236, maxdownload = 236, bytecount = 0
  • Connection #0 to host localhost left intact
    <Error><Code>NoSuchLifecycleConfiguration</Code><BucketName>liuchang</BucketName><RequestId>tx000000000000000000009-0058d3cc18-1e4cb-default</RequestId><HostId>1e4cb-default-default</HostId></Error>%
Actions #4

Updated by Chang Liu about 7 years ago

curl -v 'http://localhost:8000/liuchang/?lifecycle'
*   Trying 127.0.0.1...
* Connected to localhost (127.0.0.1) port 8000 (#0)
> GET /liuchang/?lifecycle HTTP/1.1
> Host: localhost:8000
> User-Agent: curl/7.47.0
> Accept: */*
> 
< HTTP/1.1 404 Not Found
< Content-Length: 236
< x-amz-request-id: tx000000000000000000009-0058d3cc18-1e4cb-default
< Accept-Ranges: bytes
< Content-Type: application/xml
< Date: Thu, 23 Mar 2017 13:22:32 GMT
< 
* Excess found in a non pipelined read: excess = 97, size = 236, maxdownload = 236, bytecount = 0
* Connection #0 to host localhost left intact
<?xml version="1.0" encoding="UTF-8"?><Error><Code>NoSuchLifecycleConfiguration</Code><BucketName>liuchang</BucketName><RequestId>tx000000000000000000009-0058d3cc18-1e4cb-default</RequestId><HostId>1e4cb-default-default</HostId></Error>%  

Here is a bug in LifeCycle API. I will try to fix it.

Actions #5

Updated by Yehuda Sadeh about 7 years ago

  • Description updated (diff)
Actions #7

Updated by Casey Bodley about 7 years ago

  • Status changed from New to Fix Under Review
  • Backport set to kraken
Actions #8

Updated by Yehuda Sadeh about 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF